upload all files

--- a/products/protective/index.html
+++ b/products/protective/index.html
@@ -3,22 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>น้ำยากัดเงา/ขัดเงาโลหะ (Polishing) | Baume Chemical</title>
+  <title>สารเคลือบป้องกันผิว (Anti-Tarnish & Lacquer) | Baume Chemical</title>
 
   <!-- === SEO === -->
-  <meta name="description" content="สารเคมีกัดเงา/ขัดเงาโลหะสำหรับสเตนเลส ทองเหลือง อะลูมิเนียม เหล็ก สังกะสี และตะกั่ว — เงากระจก ลดคราบ ออกแบบกระบวนการให้เหมาะกับไลน์ผลิต">
-  <meta name="robots" content="index,follow">
-  <link rel="canonical" href="https://www.baumechemical.com/products/protective/">
+  <meta name="description" content="สารเคลือบป้องกันหมองและแลคเกอร์ ป้องกันออกซิเดชัน/สีหมอง โดยคงความเงางาม ไลน์ครบ: จุ่มเย็น จุ่มร้อน อิเล็กโทร (Electro) ป้องกันหมองบนดีบุก และแลคเกอร์น้ำ">
+  <meta name="robots" content="index,follow,max-image-preview:large">
+  <link rel="canonical" href="protective.html">
+  <link rel="alternate" hreflang="th" href="protective.html">
+  <link rel="alternate" hreflang="en" href="protective.html">
   <meta name="theme-color" content="#2c5e4e">
+  <meta name="keywords" content="anti-tarnish, lacquer, protective coating, metal finishing, jewelry coating, corrosion protection, zinc, nickel, copper, brass, stainless steel, aluminum, tin, Baume Chemical">
 
   <!-- Open Graph / Twitter -->
   <meta property="og:locale" content="th_TH">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" content="น้ำยากัดเงา/ขัดเงาโลหะ (Polishing) - Baume Chemical">
-  <meta property="og:description" content="สารเคมีกัดเงา/ขัดเงาโลหะ: เงากระจก ทนการกัดกร่อน เหมาะทั้งงานอุตสาหกรรมและตกแต่ง">
-  <meta property="og:url" content="https://www.baumechemical.com/products/protective/">
-  <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-5.jpg">
+  <meta property="og:title" content="สารเคลือบป้องกันผิว (Anti-Tarnish & Lacquer) - Baume Chemical">
+  <meta property="og:description" content="โซลูชันป้องกันหมองและแลคเกอร์ ช่วยกันออกซิเดชัน/สีหมอง และเสริมความทนเค็ม พร้อมใช้งานกับงานเครื่องประดับและอุตสาหกรรม">
+  <meta property="og:url" content="https://www.baumechemical.com/protective">
+  <meta property="og:image" content="https://i.imgur.com/5krsJEX.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
   <!-- Structured Data (JSON-LD) -->
@@ -36,10 +39,10 @@
   {
     "@context":"https://schema.org",
     "@type":"CollectionPage",
-    "name":"Polishing",
     "inLanguage":"th",
-    "url":"https://www.baumechemical.com/products/protective/",
-    "description":"สารเคมีกัดเงา/ขัดเงาโลหะสำหรับสเตนเลส ทองเหลือง อะลูมิเนียม เหล็ก สังกะสี และตะกั่ว"
+    "name":"Anti-Tarnish Solution - Lacquer",
+    "url":"https://www.baumechemical.com/protective",
+    "description":"Anti-tarnish & lacquer coatings to prevent oxidation/discoloration while preserving metal shine for jewelry and industrial parts."
   }
   </script>
   <script type="application/ld+json">
@@ -48,7 +51,7 @@
     "@type":"BreadcrumbList",
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
-      {"@type":"ListItem","position":2,"name":"Polishing","item":"https://www.baumechemical.com/products/protective/"}
+      {"@type":"ListItem","position":2,"name":"Protective","item":"https://www.baumechemical.com/protective"}
     ]
   }
   </script>
@@ -57,11 +60,11 @@
     "@context":"https://schema.org",
     "@type":"ItemList",
     "itemListElement":[
-      {"@type":"ListItem","position":1,"url":"https://www.baumechemical.com/products/polishing/stainless-electropolishing-solution","name":"Stainless Steel Polishing"},
-      {"@type":"ListItem","position":2,"url":"https://www.baumechemical.com/products/polishing/brass-electropolishing-solution","name":"Brass Polishing"},
-      {"@type":"ListItem","position":3,"url":"https://www.baumechemical.com/products/polishing/aluminum-electropolishing-solution","name":"Aluminum Polishing"},
-      {"@type":"ListItem","position":4,"url":"https://www.baumechemical.com/products/polishing/steel-electropolishing-solution","name":"Steel Brite Dip"},
-      {"@type":"ListItem","position":5,"url":"https://www.baumechemical.com/products/polishing/zinc-electropolishing-solution","name":"Polishing for Zinc and Lead"}
+      {"@type":"ListItem","position":1,"name":"Cold Dip Anti-Tarnish for Copper and Brass","url":"https://www.baumechemical.com/protective/antitarnish-for-copper"},
+      {"@type":"ListItem","position":2,"name":"Hot Dip Anti-Tarnish","url":"https://www.baumechemical.com/protective/anti-tarnish-bu-186"},
+      {"@type":"ListItem","position":3,"name":"Electro Anti-Tarnish","url":"https://www.baumechemical.com/protective/anti-tarnish-bu-20"},
+      {"@type":"ListItem","position":4,"name":"Tin Anti-Tarnish","url":"https://www.baumechemical.com/protective/tin-anti-tarnish-b100"},
+      {"@type":"ListItem","position":5,"name":"Lacquer Coating","url":"https://www.baumechemical.com/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer"}
     ]
   }
   </script>
@@ -105,7 +108,7 @@
     .hero{
       position:relative; overflow:hidden; display:grid; place-items:center; text-align:center; color:#fff;
       min-height: clamp(420px, 60vh, 620px);
-      background: linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.55)), url('https://img5.pic.in.th/file/secure-sv1/thumbnail-5.jpg') center/cover no-repeat;
+      background: linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.6)), url('https://i.imgur.com/5krsJEX.jpeg') center/cover no-repeat;
     }
     .hero h1{margin:0 0 10px; font-weight:800; font-size:clamp(26px,4.2vw,44px); text-shadow:0 6px 28px rgba(0,0,0,.45)}
     .hero p{max-width:960px; margin:0 auto; color:#e6f2ef}
@@ -128,8 +131,6 @@
     .card p{margin:0; color:#5b6675; font-size:.96rem}
     .card .more{display:inline-block; margin-top:10px; color:var(--accent); font-weight:800; text-decoration:none}
     .card .more:hover{ text-decoration:underline }
-
-    /* Lift (opt-in) */
     .card.lift{ will-change: transform, box-shadow }
     @media (hover:hover) and (pointer:fine){
       .card.lift:hover, .card.lift:focus-within{ transform:translateY(-8px); box-shadow:var(--shadow-2) }
@@ -173,10 +174,9 @@
   <!-- === Hero === -->
   <header class="hero">
     <div class="wrap" style="padding:22px 16px">
-      <h1 data-i18n-key="hero_title">น้ำยากัดเงา/ขัดเงาโลหะ (Polishing)</h1>
+      <h1 data-i18n-key="hero_title">สารเคลือบป้องกันผิว (Anti-Tarnish &amp; Lacquer)</h1>
       <p data-i18n-key="hero_tagline">
-        ปรับผิวโลหะให้เงางามเรียบเนียน ลดคราบ/ลดคม และเพิ่มความทนการกัดกร่อน
-        รองรับงานสเตนเลส ทองเหลือง อะลูมิเนียม เหล็ก สังกะสี และตะกั่ว — พร้อมคำแนะนำจากทีมเทคนิค
+        ปกป้องผิวโลหะจากออกซิเดชันและสีหมอง โดยคงความเงางาม มีทั้งจุ่มเย็น/จุ่มร้อน/อิเล็กโทร, ป้องกันหมองบนดีบุก และแลคเกอร์น้ำ
       </p>
     </div>
   </header>
@@ -184,61 +184,76 @@
   <!-- === Products Grid === -->
   <main class="wrap">
     <h2 class="section" data-i18n-key="sec_products">ผลิตภัณฑ์</h2>
-    <p class="lead" data-i18n-key="sec_products_lead">เลือกสูตรให้เหมาะกับวัสดุ ชิ้นงาน และมาตรฐานของคุณ</p>
+    <p class="lead" data-i18n-key="sec_products_lead">เลือกท็อปโค้ต/แอนติทาร์นิชให้เหมาะกับโลหะและมาตรฐานการทดสอบ</p>
 
     <div class="grid">
-      <!-- Stainless -->
+      <!-- Cold Dip Anti-Tarnish -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/RJXWvbW.jpeg" alt="Stainless Steel Polishing"></picture>
+        <picture><img src="https://i.imgur.com/5krsJEX.jpeg" alt="Cold Dip Anti-Tarnish for Copper and Brass"></picture>
         <div class="body">
-          <div class="badge-row"><span class="badge">Electropolishing</span><span class="badge">Mirror Finish</span></div>
-          <h3 data-i18n-key="st_title">สเตนเลส (Electropolishing)</h3>
-          <p data-i18n-key="st_desc">ทำผิวเรียบลื่นเงากระจก ลดคม ตั้งค่ากระแสและอุณหภูมิได้กว้าง ผิวที่ได้ทนการกัดกร่อนและสะอาดพร้อมขั้นตอนถัดไป.</p>
-          <a class="more" href="stainless-electropolishing-solution.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <div class="badge-row"><span class="badge">Protective</span><span class="badge">Cold Dip</span></div>
+          <h3 data-i18n-key="cold_t">Cold Dip Anti-Tarnish (Cu/Brass)</h3>
+          <p data-i18n-key="cold_d">
+            น้ำยาใสอมเหลือง ใช้เป็นบ่อสุดท้ายหลังชุบหรือหลังล้างเงา ช่วยไล่คราบน้ำ แห้งไว ไม่ทิ้งรอย
+            สร้างฟิล์มใสป้องกันหมอง เหมาะงานอิเล็กทรอนิกส์/จิวเวลรี่ ทดสอบความชื้นได้ ~200 ชม.
+          </p>
+          <a class="more" href="antitarnish-for-copper.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
-      <!-- Brass -->
+      <!-- Hot Dip Anti-Tarnish -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/wEo6YIQ.jpeg" alt="Brass Polishing"></picture>
+        <picture><img src="https://i.imgur.com/GpAzo8t.jpeg" alt="Hot Dip Anti-Tarnish"></picture>
         <div class="body">
-          <div class="badge-row"><span class="badge">Nitric-free</span><span class="badge">Low Fume</span></div>
-          <h3 data-i18n-key="br_title">ทองเหลือง (Brass Polishing)</h3>
-          <p data-i18n-key="br_desc">สูตรไร้กรดไนตริก ควันต่ำ คืนความเงางาม ลดคราบเขียว/สนิมแดง ใช้ได้ทั้งจุ่มและถังกลิ้ง พร้อมเข้าสู่ขั้นตอนชุบต่อได้ทันที.</p>
-          <a class="more" href="brass-electropolishing-solution.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <div class="badge-row"><span class="badge">Protective</span><span class="badge">Hot Dip</span></div>
+          <h3 data-i18n-key="hot_t">Hot Dip Anti-Tarnish</h3>
+          <p data-i18n-key="hot_d">
+            เคมีเคลือบผิวสำหรับซิงค์ นิกเกิล โครม สแตนเลส ทอง เงิน ฯลฯ ช่วยไล่คราบน้ำ แห้งไว เคลือบป้องกันสนิมบริเวณไม่ได้ชุบ
+            ฟิล์มยืดหยุ่น ทนทาน ไร้สารตะกั่ว ผิวสัมผัสปลอดภัย.
+          </p>
+          <a class="more" href="anti-tarnish-bu-186.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
-      <!-- Aluminium -->
+      <!-- Electro Anti-Tarnish -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/HTuaHH8.jpeg" alt="Aluminum Polishing"></picture>
+        <picture><img src="https://i.imgur.com/lh9CVn9.jpeg" alt="Electro Anti-Tarnish"></picture>
         <div class="body">
-          <div class="badge-row"><span class="badge">Hot Dip / Electro</span><span class="badge">Fast Shine</span></div>
-          <h3 data-i18n-key="al_title">อะลูมิเนียม (Hot Dip / Electro)</h3>
-          <p data-i18n-key="al_desc">ทั้งแบบจุ่มร้อนและอิเล็กโทรโพลิช ควบคุมได้ละเอียด เงาเร็ว ลบคราบ/หมองบนอะลูมิเนียมให้เรียบเนียนทนทาน.</p>
-          <a class="more" href="aluminum-electropolishing-solution.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <div class="badge-row"><span class="badge">Protective</span><span class="badge">Electro</span></div>
+          <h3 data-i18n-key="elec_t">Electro Anti-Tarnish</h3>
+          <p data-i18n-key="elec_d">
+            สำหรับเงิน ทอง นิกเกิล ทองแดงและอัลลอยด์ เคลือบไฟฟ้าเพื่อล็อกสี ลดหมอง ช่วยแห้งไว
+            เพิ่มความลื่นผิว ฟิล์มไม่ระคายเคืองผิวหนัง และไม่ก่อสีผิดเพี้ยน.
+          </p>
+          <a class="more" href="anti-tarnish-bu-20.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
-      <!-- Steel -->
+      <!-- Tin Anti-Tarnish -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/FHHDk78.jpeg" alt="Steel Brite Dip"></picture>
+        <picture><img src="https://i.imgur.com/XZQoDHI.jpeg" alt="Tin Anti-Tarnish"></picture>
         <div class="body">
-          <div class="badge-row"><span class="badge">Brite Dip</span><span class="badge">Deburr</span></div>
-          <h3 data-i18n-key="steel_title">เหล็ก (Brite Dip)</h3>
-          <p data-i18n-key="steel_desc">ขจัดสนิม/รอยและทำผิวเหล็กให้เงาใสแบบกระจก ใช้งานง่าย ได้ผลเร็ว รองรับทั้งจุ่มและกระบวนการไฟฟ้า.</p>
-          <a class="more" href="steel-electropolishing-solution.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <div class="badge-row"><span class="badge">Protective</span><span class="badge">Tin</span></div>
+          <h3 data-i18n-key="tin_t">Tin Anti-Tarnish</h3>
+          <p data-i18n-key="tin_d">
+            น้ำยาป้องกันหมองบนผิวดีบุก ช่วยคงโทนสีเดิมได้ยาวนาน เพิ่มความทนผิว อ่างมีเสถียรภาพสูง
+            อายุการเก็บนานนับปีโดยไม่เสื่อม.
+          </p>
+          <a class="more" href="tin-anti-tarnish-b100.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
-      <!-- Zinc & Lead -->
+      <!-- Water-based Lacquer -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/KmCDo7F.png" alt="Polishing for Zinc and Lead"></picture>
+        <picture><img src="https://i.imgur.com/I4Kncp2.jpeg" alt="Water-Based Lacquer"></picture>
         <div class="body">
-          <div class="badge-row"><span class="badge">Zinc/Lead</span><span class="badge">Restore Shine</span></div>
-          <h3 data-i18n-key="zn_title">สังกะสีและตะกั่ว</h3>
-          <p data-i18n-key="zn_desc">ล้างคราบตะกั่ว/ออกไซด์ คืนความเงาสดใส ลดความขรุขระของผิว และเพิ่มความทนต่อการกัดกร่อนของชิ้นงาน.</p>
-          <a class="more" href="zinc-electropolishing-solution.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <div class="badge-row"><span class="badge">Protective</span><span class="badge">Lacquer (Water-based)</span></div>
+          <h3 data-i18n-key="lacq_t">Lacquer Coating</h3>
+          <p data-i18n-key="lacq_d">
+            แลคเกอร์น้ำ เพิ่มความทนเค็มและกันหมอง ใช้กับซิงค์/อัลลอยด์ได้แม้ไม่โครเมต หรือทับบน Cr3/Cr6 ก็ได้
+            โทนผิวไม่เพี้ยน เหมาะกับ Ni/Cr/Cu/Brass/SS/Al.
+          </p>
+          <a class="more" href="troubleshootingelectrophoreticlacquer.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
     </div>
@@ -307,40 +322,40 @@
     /* i18n dictionary */
     const I18N = {
       th: {
-        hero_title: "น้ำยากัดเงา/ขัดเงาโลหะ (Polishing)",
-        hero_tagline: "ปรับผิวโลหะให้เงางามเรียบเนียน ลดคราบ/ลดคม และเพิ่มความทนการกัดกร่อน รองรับงานสเตนเลส ทองเหลือง อะลูมิเนียม เหล็ก สังกะสี และตะกั่ว — พร้อมคำแนะนำจากทีมเทคนิค",
+        hero_title: "สารเคลือบป้องกันผิว (Anti-Tarnish & Lacquer)",
+        hero_tagline: "ปกป้องผิวโลหะจากออกซิเดชันและสีหมอง โดยคงความเงางาม มีทั้งจุ่มเย็น/จุ่มร้อน/อิเล็กโทร, ป้องกันหมองบนดีบุก และแลคเกอร์น้ำ",
         sec_products: "ผลิตภัณฑ์",
-        sec_products_lead: "เลือกสูตรให้เหมาะกับวัสดุ ชิ้นงาน และมาตรฐานของคุณ",
-        st_title: "สเตนเลส (Electropolishing)",
-        st_desc: "ทำผิวเรียบลื่นเงากระจก ลดคม ตั้งค่ากระแสและอุณหภูมิได้กว้าง ผิวที่ได้ทนการกัดกร่อนและสะอาดพร้อมขั้นตอนถัดไป.",
-        br_title: "ทองเหลือง (Brass Polishing)",
-        br_desc: "สูตรไร้กรดไนตริก ควันต่ำ คืนความเงางาม ลดคราบเขียว/สนิมแดง ใช้ได้ทั้งจุ่มและถังกลิ้ง พร้อมเข้าสู่ขั้นตอนชุบต่อได้ทันที.",
-        al_title: "อะลูมิเนียม (Hot Dip / Electro)",
-        al_desc: "ทั้งแบบจุ่มร้อนและอิเล็กโทรโพลิช ควบคุมได้ละเอียด เงาเร็ว ลบคราบ/หมองบนอะลูมิเนียมให้เรียบเนียนทนทาน.",
-        steel_title: "เหล็ก (Brite Dip)",
-        steel_desc: "ขจัดสนิม/รอยและทำผิวเหล็กให้เงาใสแบบกระจก ใช้งานง่าย ได้ผลเร็ว รองรับทั้งจุ่มและกระบวนการไฟฟ้า.",
-        zn_title: "สังกะสีและตะกั่ว",
-        zn_desc: "ล้างคราบตะกั่ว/ออกไซด์ คืนความเงาสดใส ลดความขรุขระของผิว และเพิ่มความทนต่อการกัดกร่อนของชิ้นงาน.",
+        sec_products_lead: "เลือกท็อปโค้ต/แอนติทาร์นิชให้เหมาะกับโลหะและมาตรฐานการทดสอบ",
+        cold_t: "Cold Dip Anti-Tarnish (Cu/Brass)",
+        cold_d: "น้ำยาใสอมเหลือง ใช้เป็นบ่อสุดท้ายหลังชุบหรือหลังล้างเงา ช่วยไล่คราบน้ำ แห้งไว ไม่ทิ้งรอย สร้างฟิล์มใสป้องกันหมอง เหมาะงานอิเล็กทรอนิกส์/จิวเวลรี่ ทดสอบความชื้นได้ ~200 ชม.",
+        hot_t: "Hot Dip Anti-Tarnish",
+        hot_d: "เคมีเคลือบผิวสำหรับซิงค์ นิกเกิล โครม สแตนเลส ทอง เงิน ฯลฯ ไล่คราบน้ำ แห้งไว ป้องกันสนิมบริเวณไม่ได้ชุบ ฟิล์มยืดหยุ่น ทนทาน ไร้สารตะกั่ว ผิวสัมผัสปลอดภัย",
+        elec_t: "Electro Anti-Tarnish",
+        elec_d: "สำหรับเงิน ทอง นิกเกิล ทองแดง/อัลลอยด์ เคลือบไฟฟ้าล็อกสี ลดหมอง แห้งไว ผิวลื่น ไม่ระคายเคือง และไม่ก่อสีผิดเพี้ยน",
+        tin_t: "Tin Anti-Tarnish",
+        tin_d: "ป้องกันหมองบนผิวดีบุก คงโทนสีเดิมยาวนาน เพิ่มความทนผิว อ่างเสถียร อายุเก็บยาวโดยไม่เสื่อม",
+        lacq_t: "Lacquer Coating",
+        lacq_d: "แลคเกอร์น้ำ เพิ่มความทนเค็ม/กันหมอง ใช้กับซิงค์แม้ไม่โครเมต หรือทับ Cr3/Cr6 ก็ได้ โทนผิวไม่เพี้ยน เหมาะกับ Ni/Cr/Cu/Brass/SS/Al",
         view_details: "ดูรายละเอียด →",
         footer_products: "หมวดผลิตภัณฑ์",
         footer_contact: "ติดต่อเรา",
         footer_copy: "© 2025 Baume Chemical. All rights reserved."
       },
       en: {
-        hero_title: "Metal Polishing & Brightening",
-        hero_tagline: "Smooth, mirror-like finishes with improved corrosion resistance—for stainless steel, brass, aluminum, steel, zinc, and lead. Expert guidance tailored to your line.",
+        hero_title: "Anti-Tarnish & Lacquer Protective Coatings",
+        hero_tagline: "Prevent oxidation/tarnish while preserving shine — cold dip, hot dip, electro, tin anti-tarnish, and water-based lacquer.",
         sec_products: "Products",
-        sec_products_lead: "Choose formulations suited to your substrate, parts, and standards.",
-        st_title: "Stainless Steel (Electropolishing)",
-        st_desc: "Achieve mirror finish, deburr edges, and tune current/temperature over a wide window. Clean, corrosion-resistant surfaces ready for the next step.",
-        br_title: "Brass (Brass Polishing)",
-        br_desc: "Nitric-free, low-fume formula. Restores shine, removes green/copper rust. Works in dip and barrel; proceed to plating immediately.",
-        al_title: "Aluminum (Hot Dip / Electro)",
-        al_desc: "Both hot-dip and electro-polish options. Precise control, fast gloss, removes haze and residues—durable, smooth aluminum surfaces.",
-        steel_title: "Steel (Brite Dip)",
-        steel_desc: "Removes rust/marks and produces a mirror-like steel finish. Simple process, quick results—supports dip or electro steps.",
-        zn_title: "Zinc & Lead",
-        zn_desc: "Removes lead deposits/oxides, restores brightness, smooths the surface, and boosts corrosion resistance.",
+        sec_products_lead: "Pick a protective topcoat / anti-tarnish suited to your metal and test spec.",
+        cold_t: "Cold Dip Anti-Tarnish (Cu/Brass)",
+        cold_d: "Yellowish clear rinse for final stage after plating or bright dipping; sheds water, dries fast, leaves no marks and deposits a clear film. Ideal for electronics and jewelry; humidity test ~200 h.",
+        hot_t: "Hot Dip Anti-Tarnish",
+        hot_d: "For Zn, Ni, Cr, SS, Au, Ag, etc. Removes water marks, speeds drying, protects unplated areas. Flexible, durable, lead-free film; skin-contact friendly.",
+        elec_t: "Electro Anti-Tarnish",
+        elec_d: "For Ag, Au, Ni, Cu/alloys. Electro-applied film locks color, reduces tarnish, dries quickly, adds slip; non-irritating and color-neutral.",
+        tin_t: "Tin Anti-Tarnish",
+        tin_d: "Designed for tin surfaces; keeps original tone for long periods, improves durability. Highly stable bath with long shelf life.",
+        lacq_t: "Lacquer Coating",
+        lacq_d: "Water-based lacquer boosting salt-spray and tarnish resistance. Apply on Zn/Zn-alloy without chromate, or over Cr3/Cr6. Tone-neutral; suitable for Ni/Cr/Cu/Brass/SS/Al.",
         view_details: "View Details →",
         footer_products: "Products",
         footer_contact: "Contact Us",
