upload all files

--- a/products/protective/index.html
+++ b/products/protective/index.html
@@ -41,7 +41,7 @@
     "@type":"CollectionPage",
     "inLanguage":"th",
     "name":"Anti-Tarnish Solution - Lacquer",
-    "url":"https://www.baumechemical.com/protective",
+    "url":"https://www.baumechemical.com/products/protective/",
     "description":"Anti-tarnish & lacquer coatings to prevent oxidation/discoloration while preserving metal shine for jewelry and industrial parts."
   }
   </script>
@@ -51,7 +51,7 @@
     "@type":"BreadcrumbList",
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
-      {"@type":"ListItem","position":2,"name":"Protective","item":"https://www.baumechemical.com/protective"}
+      {"@type":"ListItem","position":2,"name":"Protective","item":"https://www.baumechemical.com/products/protective/"}
     ]
   }
   </script>
@@ -60,11 +60,11 @@
     "@context":"https://schema.org",
     "@type":"ItemList",
     "itemListElement":[
-      {"@type":"ListItem","position":1,"name":"Cold Dip Anti-Tarnish for Copper and Brass","url":"https://www.baumechemical.com/protective/antitarnish-for-copper"},
-      {"@type":"ListItem","position":2,"name":"Hot Dip Anti-Tarnish","url":"https://www.baumechemical.com/protective/anti-tarnish-bu-186"},
-      {"@type":"ListItem","position":3,"name":"Electro Anti-Tarnish","url":"https://www.baumechemical.com/protective/anti-tarnish-bu-20"},
-      {"@type":"ListItem","position":4,"name":"Tin Anti-Tarnish","url":"https://www.baumechemical.com/protective/tin-anti-tarnish-b100"},
-      {"@type":"ListItem","position":5,"name":"Lacquer Coating","url":"https://www.baumechemical.com/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer"}
+      {"@type":"ListItem","position":1,"name":"Cold Dip Anti-Tarnish for Copper and Brass","url":"https://www.baumechemical.com/products/protective/antitarnish-for-copper"},
+      {"@type":"ListItem","position":2,"name":"Hot Dip Anti-Tarnish","url":"https://www.baumechemical.com/products/protective/anti-tarnish-bu-186"},
+      {"@type":"ListItem","position":3,"name":"Electro Anti-Tarnish","url":"https://www.baumechemical.com/products/protective/anti-tarnish-bu-20"},
+      {"@type":"ListItem","position":4,"name":"Tin Anti-Tarnish","url":"https://www.baumechemical.com/products/protective/tin-anti-tarnish-b100"},
+      {"@type":"ListItem","position":5,"name":"Lacquer Coating","url":"https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer"}
     ]
   }
   </script>
