upload all files

--- a/products.html
+++ b/products.html
@@ -457,7 +457,7 @@ const PRODUCTS = [
            en:"Improve corrosion resistance; trivalent systems and hex-6-free options." },
     tags:{ th:["passivation","chromate","trivalent","hex-free","โครเมต","โครเมต 3"],
            en:["passivation","chromate","trivalent","hex-free"] },
-    img:"https://i.imgur.com/FovZyQU.jpeg",
+    img:"https://img5.pic.in.th/file/secure-sv1/image36c92f06ecf965146.jpeg",
     href:"products/passivation/index.html",
     mail:"mailto:baumechemical@gmail.com?subject=ขอใบเสนอราคา: โครเมตบนซิงค์",
     tds:"https://www.baumechemical.com/docs/tds/passivation-zinc.pdf",
