--- a/products/protective/index.html
+++ b/products/protective/index.html
@@ -21,7 +21,7 @@
   <meta property="og:title" content="สารเคลือบป้องกันผิว (Anti-Tarnish & Lacquer) - Baume Chemical">
   <meta property="og:description" content="โซลูชันป้องกันหมองและแลคเกอร์ ช่วยกันออกซิเดชัน/สีหมอง และเสริมความทนเค็ม พร้อมใช้งานกับงานเครื่องประดับและอุตสาหกรรม">
   <meta property="og:url" content="https://www.baumechemical.com/protective">
-  <meta property="og:image" content="https://i.imgur.com/5krsJEX.jpeg">
+  <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/image8a6055e938ac1f34c.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
   <!-- Structured Data (JSON-LD) -->
@@ -108,7 +108,7 @@
     .hero{
       position:relative; overflow:hidden; display:grid; place-items:center; text-align:center; color:#fff;
       min-height: clamp(420px, 60vh, 620px);
-      background: linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.6)), url('https://i.imgur.com/5krsJEX.jpeg') center/cover no-repeat;
+      background: linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.6)), url('https://img5.pic.in.th/file/secure-sv1/image8a6055e938ac1f34c.jpeg') center/cover no-repeat;
     }
     .hero h1{margin:0 0 10px; font-weight:800; font-size:clamp(26px,4.2vw,44px); text-shadow:0 6px 28px rgba(0,0,0,.45)}
     .hero p{max-width:960px; margin:0 auto; color:#e6f2ef}
@@ -189,7 +189,7 @@
     <div class="grid">
       <!-- Cold Dip Anti-Tarnish -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/5krsJEX.jpeg" alt="Cold Dip Anti-Tarnish for Copper and Brass"></picture>
+        <picture><img src="https://img2.pic.in.th/pic/image9.jpeg" alt="Cold Dip Anti-Tarnish for Copper and Brass"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">Protective</span><span class="badge">Cold Dip</span></div>
           <h3 data-i18n-key="cold_t">Cold Dip Anti-Tarnish (Cu/Brass)</h3>
@@ -203,7 +203,7 @@
 
       <!-- Hot Dip Anti-Tarnish -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/GpAzo8t.jpeg" alt="Hot Dip Anti-Tarnish"></picture>
+        <picture><img src="https://img5.pic.in.th/file/secure-sv1/image8a6055e938ac1f34c.jpeg" alt="Hot Dip Anti-Tarnish"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">Protective</span><span class="badge">Hot Dip</span></div>
           <h3 data-i18n-key="hot_t">Hot Dip Anti-Tarnish</h3>
@@ -217,7 +217,7 @@
 
       <!-- Electro Anti-Tarnish -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/lh9CVn9.jpeg" alt="Electro Anti-Tarnish"></picture>
+        <picture><img src="https://img2.pic.in.th/pic/image4bb21a99d474156ba.jpeg" alt="Electro Anti-Tarnish"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">Protective</span><span class="badge">Electro</span></div>
           <h3 data-i18n-key="elec_t">Electro Anti-Tarnish</h3>
@@ -245,7 +245,7 @@
 
       <!-- Water-based Lacquer -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/I4Kncp2.jpeg" alt="Water-Based Lacquer"></picture>
+        <picture><img src="https://img2.pic.in.th/pic/image70df94b7a595d49ee.jpeg" alt="Water-Based Lacquer"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">Protective</span><span class="badge">Lacquer (Water-based)</span></div>
           <h3 data-i18n-key="lacq_t">Lacquer Coating</h3>
