--- a/products/protective/anti-tarnish-bu-20.html
+++ b/products/protective/anti-tarnish-bu-20.html
@@ -19,7 +19,7 @@
 <meta property="og:title" content="BU-20 Anti-Tarnish (Electrolytic) • น้ำยากันหมองไฟฟ้า">
 <meta property="og:description" content="Final electrolytic anti-tarnish for Ag/Au/Ni/Cu. 80–120 mL/L • 20–35 °C • 30–120 s • 0.1–0.5 A/dm².">
 <meta property="og:url" content="https://www.baumechemical.com/bu-20.html">
-<meta property="og:image" content="https://i.imgur.com/lh9CVn9.jpeg">
+<meta property="og:image" content="https://img2.pic.in.th/pic/image4bb21a99d474156ba.jpeg">
 <meta property="og:image:alt" content="BU-20 Electrolytic Anti-Tarnish — Baume Chemical">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="BU-20 Anti-Tarnish (Electrolytic) • น้ำยากันหมองไฟฟ้า">
@@ -84,7 +84,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="preload" as="image" href="https://i.imgur.com/lh9CVn9.jpeg">
+  <link rel="preload" as="image" href="https://img2.pic.in.th/pic/image4bb21a99d474156ba.jpeg">
 
   <style>
     :root{
@@ -114,7 +114,7 @@
       position:relative; display:grid; place-items:center; text-align:center; color:#fff;
       min-height: clamp(360px, 58svh, 620px);
       background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.55)),
-                 url('https://i.imgur.com/lh9CVn9.jpeg') center/cover no-repeat;
+                 url('https://img2.pic.in.th/pic/image4bb21a99d474156ba.jpeg') center/cover no-repeat;
     }
     .hero h1{font-size:clamp(26px,4.2vw,46px);font-weight:800;text-shadow:0 6px 28px rgba(0,0,0,.45);margin:0 0 10px}
     .hero p{max-width:980px;margin:0 auto;color:#e6f2ef}
